Add music + Levels

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <canvas></canvas>
     </div>
       <strong>Puntuación: <span></span></strong>
-    
+      <strong>Level: <span></span></strong>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
